[gd_scene load_steps=6 format=3 uid="uid://ddd6dpxasgawl"]

[ext_resource type="Script" uid="uid://dgnmkh4uwid4o" path="res://character_script.gd" id="1_yvgsq"]
[ext_resource type="PackedScene" uid="uid://c4eddbn7u1bf7" path="res://board.glb" id="2_g28gv"]
[ext_resource type="Script" uid="uid://fahl3lw5jnxo" path="res://camera_pivot.gd" id="3_hqtel"]

[sub_resource type="BoxShape3D" id="BoxShape3D_colhj"]
size = Vector3(0.254715, 0.0462646, 1.50574)

[sub_resource type="SphereMesh" id="SphereMesh_0wftd"]

[node name="Player" type="Node3D"]

[node name="PlayerController" type="CharacterBody3D" parent="." groups=["hoverboard"]]
collision_layer = 2
slide_on_ceiling = false
wall_min_slide_angle = 0.0
floor_stop_on_slope = false
floor_max_angle = 1.5708
floor_snap_length = 0.2
script = ExtResource("1_yvgsq")

[node name="Board" parent="PlayerController" instance=ExtResource("2_g28gv")]

[node name="CameraPivot" type="Node3D" parent="PlayerController/Board"]
script = ExtResource("3_hqtel")
player_path = NodePath("../..")

[node name="SpringArm3D" type="SpringArm3D" parent="PlayerController/Board/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 1.5)
spring_length = 0.3

[node name="SprungCamera" type="Camera3D" parent="PlayerController/Board/CameraPivot/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000637174, 0.067688, 0.00518799)
shape = SubResource("BoxShape3D_colhj")

[node name="RemoteTransformFL" type="RemoteTransform3D" parent="PlayerController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0.02, -0.65)
remote_path = NodePath("../RayCastFL")

[node name="RemoteTransformFR" type="RemoteTransform3D" parent="PlayerController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 0.02, -0.65)
remote_path = NodePath(".")

[node name="RemoteTransformBL" type="RemoteTransform3D" parent="PlayerController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0.02, 0.65)
remote_path = NodePath(".")

[node name="RemoteTransformBR" type="RemoteTransform3D" parent="PlayerController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 0.02, 0.65)
remote_path = NodePath(".")

[node name="RayCastFL" type="RayCast3D" parent="PlayerController" groups=["raycasts"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0.02, -0.65)
target_position = Vector3(0, -0.25, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerController/RayCastFL"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
mesh = SubResource("SphereMesh_0wftd")

[node name="RayCastFR" type="RayCast3D" parent="PlayerController" groups=["raycasts"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 0.02, -0.65)
target_position = Vector3(0, -0.25, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerController/RayCastFR"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
mesh = SubResource("SphereMesh_0wftd")

[node name="RayCastBL" type="RayCast3D" parent="PlayerController" groups=["raycasts"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0.02, 0.65)
target_position = Vector3(0, -0.25, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerController/RayCastBL"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
mesh = SubResource("SphereMesh_0wftd")

[node name="RayCastBR" type="RayCast3D" parent="PlayerController" groups=["raycasts"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 0.02, 0.65)
target_position = Vector3(0, -0.25, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerController/RayCastBR"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
mesh = SubResource("SphereMesh_0wftd")

[node name="ForwardRayCastFL" type="RayCast3D" parent="PlayerController"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.05, 0.02, -0.65)

[node name="ForwardRayCastFR" type="RayCast3D" parent="PlayerController"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.05, 0.02, -0.65)
